--- a/basket.html
+++ b/basket.html
@@ -17,7 +17,7 @@
       <!-- Top Row (User Actions) -->
       <div class="d-flex justify-content-end w-100 py-2">
      
-        <a class="nav-link text-white me-3" href="B3_ASIGNMENT.html">Home</a>
+        <a class="nav-link text-white me-3" href="index.html">Home</a>
         <a class="nav-link text-white me-3" href="loginpage.html">Sign In / Register</a>
         <a class="nav-link text-white me-3" href="fav.html">❤️ - Favorites</a>
         <a class="nav-link text-white" href="basket.html">🛒 - Cart</a>
