--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
       <!-- Navbar Items -->
       <ul class="nav nav-tabs ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="B3_ASIGNMENT.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>   
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">MENU</a>
