--- a/poland.html
+++ b/poland.html
@@ -71,6 +71,12 @@
 <div id="ce" class="carousel slide" data-bs-ride="true" >
     <div class="carousel-inner">
       <div class="carousel-item active">
+        <img src="EU.jpg" class="w-100" alt="eu...">
+      </div>
+      <div class="carousel-item">
+        <img src="eumap.jpg" class="w-100" alt="...">
+      </div>
+      <div class="carousel-item">
         <img src="coolfood.jpg" class="w-100" alt="...">
       </div>
       <div class="carousel-item">
