--- a/romania.html
+++ b/romania.html
@@ -71,7 +71,7 @@
 <div id="ce" class="carousel slide" data-bs-ride="true" >
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="EU.jpg" class="w-100" alt="...">
+        <img src="https://media.istockphoto.com/id/538600418/photo/vltava-river-and-charle-bridge-with-red-foliage.jpg?s=612x612&w=0&k=20&c=BffSr90b3IzgMJWSesu7FgMl51fNjXkBQ--Ed40yRXw=" class="w-100" alt="eu...">
       </div>
       <div class="carousel-item">
         <img src="eumap.jpg" class="w-100" alt="...">
@@ -95,7 +95,6 @@
         <img src="PF4.jpg" class="w-100" alt="...">
       </div>
     </div>
-
     <button class="carousel-control-prev" type="button" 
     data-bs-target="#ce" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
